resolve adminjs bundle issue

--- a/ShopVibe-server/package.json
+++ b/ShopVibe-server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "build": "node scripts/bundleAdmin.js"
   },
   "keywords": [],
   "author": "",
