--- a/ShopVibe-server/package.json
+++ b/ShopVibe-server/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
-    "build": "node scripts/bundleAdmin.js"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "keywords": [],
   "author": "",
